# Synapse

./: .gitignore  ARCHITECTURE_DETAILED.md  Cargo.toml  Project Upgrade Roadmap for Synapse.md  README.md  VERIFICATION.md  deny.toml  rust-toolchain.toml
.github/instructions/: plan.instructions.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  EVENT_SOURCING.md  IDENTITY.md  PROTOCOLS.md
examples/: toon_serialize.rs
policies/: guardrails.cedar
syn-admin/: Cargo.toml
syn-admin/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  state.rs  templates.rs
syn-admin/src/api/: audit.rs  backups.rs  cluster.rs  health.rs  mod.rs  rate_limits.rs  tenants.rs
syn-admin/static/css/: style.css
syn-admin/static/js/: htmx.min.js
syn-admin/templates/: audit.html  backups.html  base.html  dashboard.html  settings.html  tenants.html
syn-cli/: Cargo.toml
syn-cli/src/: main.rs
syn-core/: Cargo.toml
syn-core/src/: error.rs  lib.rs  telemetry.rs  types.rs  uncopyable.rs
syn-core/src/enterprise/: audit.rs  backup.rs  geo_replication.rs  mod.rs  rate_limit.rs  tenancy.rs
syn-identity/: Cargo.toml
syn-identity/src/: attestation.rs  lib.rs  provider.rs  spiffe.rs  tls.rs
syn-identity/src/ebpf/: allowlist.rs  kprobe.rs  mod.rs  verifier.rs  xdp.rs
syn-memory/: Cargo.toml
syn-memory/src/: consensus.rs  crdt.rs  embedder.rs  event_store.rs  graph.rs  lance.rs  lancedb.rs  lib.rs  vector.rs
syn-network/: Cargo.toml
syn-network/src/: adapters.rs  hash_ring.rs  lib.rs  masque.rs  quic.rs
syn-policy/: Cargo.toml
syn-policy/src/: cedar.rs  engine.rs  hot_reload.rs  lib.rs  policy.rs  verdict.rs  wasm_host.rs
syn-proto/: Cargo.toml
syn-proto/src/: a2a.rs  control.rs  data.rs  error.rs  lib.rs  mcp.rs  rkyv.rs  serde.rs  toon.rs
syn-proxy/: Cargo.toml
syn-proxy/src/: lib.rs  main.rs  node.rs  server.rs
syn-proxy/src/net/: mod.rs  quic.rs  real.rs
syn-proxy/src/windows/: mock.rs  mod.rs
synapse-ebpf/: Cargo.toml
synapse-ebpf/.cargo/: config.toml
synapse-ebpf/src/: main.rs
tools/ci/: build.sh  test.sh
tools/docker/: Dockerfile.cli  Dockerfile.proxy  docker-compose.yml
tools/fuzz/: Cargo.toml
tools/fuzz/fuzz_targets/: protocol_parse.rs  toon_parse.rs
tools/scripts/: benchmark.sh  check-deps.sh
wit/: governance.wit
xtask/: Cargo.toml
xtask/src/: main.rs
