# =============================================================================
# SYN-IDENTITY: Secure Workload Identity & Attestation
# =============================================================================
# SPIFFE/SPIRE integration for ephemeral agent identity.
# Provides X.509 SVID management, mutual TLS, and process attestation.
#
# WHY THIS CRATE: Zero-trust identity derived from the kernel itself.
# No static API keys - identity comes from binary hashes and cgroup membership.
# =============================================================================

[package]
name = "syn-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SPIFFE/SPIRE integration for secure workload identity in Synapse"

[dependencies]
# Internal crates
syn-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Telemetry
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptographic hashing for binary attestation
# WHY sha2: Industry standard, FIPS compliant, used for binary hash verification
sha2 = "0.10"
# WHY hex: Binary hash display and parsing
hex = "0.4"
# WHY toml: Configuration file parsing for allowlists
toml = "0.8"

# TLS and certificate handling
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
x509-parser = { version = "0.17", optional = true }

# eBPF support (Linux only)
# WHY aya: Pure Rust eBPF library, no libbpf dependency, excellent ergonomics
aya = { version = "0.13", optional = true }
# WHY bytes: Zero-copy buffer handling for perf events
bytes = { version = "1.5", optional = true }

[features]
default = []
# SPIFFE/SPIRE integration
spiffe = ["dep:rustls", "dep:rustls-pemfile", "dep:x509-parser"]
# eBPF instrumentation (Linux only)
ebpf = ["dep:aya", "dep:bytes"]

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies can be added here

[lints]
workspace = true

